--- a/src/assets/css/Navbar.css
+++ b/src/assets/css/Navbar.css
@@ -7,4 +7,26 @@
     padding: 12px;
     font-weight: bold;
 }
+.cart{
+    margin-left: 10px;
+}
+
+.search_wrapper{
+    width: 300px;
+}
+.search_wrapper {
+    position: relative;
+  }
+  
+  .search-results {
+    position: absolute;
+    top: 100%;
+    left: 70;
+    width: 300px;
+    z-index: 100;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-top: none;
+    padding: 10px;
+  }
 
